feat: Implement responsive design  - Enchance code legibility by refactoring js  - Improve code documentation  - Add media queries

--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
     <main class="main">
         <section class="plans">
             <h2 class="plans--title">Plans</h2>
-            <div class="plan plan--active">
-                <h3 class="plan--title">5k</h3>
-                <p class="plan--sub">Duration</p>
-                <p class="plan--weeks">8 weeks</p>
-            </div>
-            <div class="plan">
-                <h3 class="plan--title">10k</h3>
-                <p class="plan--sub">Duration</p>
-                <p class="plan--weeks">10 weeks</p>
-            </div>
-            <div class="plan">
-                <h3 class="plan--title">21k</h3>
-                <p class="plan--sub">Duration</p>
-                <p class="plan--weeks">12 weeks</p>
-            </div>
-            <div class="plan">
-                <h3 class="plan--title">42k</h3>
-                <p class="plan--sub">Duration</p>
-                <p class="plan--weeks">18 weeks</p>
+            <div class="plans--container">
+                <div class="plan plan--active">
+                    <h3 class="plan--title">5k</h3>
+                    <p class="plan--sub">Duration</p>
+                    <p class="plan--weeks">8 weeks</p>
+                </div>
+                <div class="plan">
+                    <h3 class="plan--title">10k</h3>
+                    <p class="plan--sub">Duration</p>
+                    <p class="plan--weeks">10 weeks</p>
+                </div>
+                <div class="plan">
+                    <h3 class="plan--title">21k</h3>
+                    <p class="plan--sub">Duration</p>
+                    <p class="plan--weeks">12 weeks</p>
+                </div>
+                <div class="plan">
+                    <h3 class="plan--title">42k</h3>
+                    <p class="plan--sub">Duration</p>
+                    <p class="plan--weeks">18 weeks</p>
+                </div>
+
             </div>
         </section>
         <section class="mid">
