Fix: Update js link in html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 rel="noopener noreferrer">Download</a>
         </section>
     </main>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
